added some texts

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         </div>
     </div>
   
+
+<div class="title-banner2">
+        
     <div class="container item-wrapper">
         <div class="item">
             <h2>China</h2>
@@ -38,5 +41,7 @@
             <p>And lagoons along the Garden Route, and the city of Cape Town, beneath flat-topped Table Mountain.</p>
         </div>
     </div>
+</div>
+
 </body>
 </html>
